[package]
name = "game"
version = "0.1.0"
authors = ["Tech Penguin <85949246+TechPenguineer@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston="0.36.0"
piston2d-graphics="0.26.0"
pistoncore-glutin_window="0.45.0"
piston2d-opengl_graphics="0.52.0"
rand = "0.4"
